# python-template-project

./: .containerignore  .cz.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  Containerfile  LICENSE  README.md  justfile  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
.opencode/: opencode.json
.opencode/agents/: reviewer.md
.opencode/skills/test-generator/: SKILL.md
docs/: contributing.md  deployment.md  development.md  index.md  opencode.md
docs/api/: api.md  cli.md  core.md
docs/getting-started/: installation.md  quickstart.md
src/python_template/: __init__.py  cli.py
src/python_template/api/: __init__.py  app.py
src/python_template/core/: __init__.py  config.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_api.py  test_cli.py  test_core.py
